@@ -6,8 +6,9 @@
 ; general section
 
 [general]
-nationalprefix=0
-internationalprefix=00
+nationalprefix=0        ; or for example "+49"
+internationalprefix=00  ; or for example "+"
+;subscriberprefix=+4969 ; prefix including area code (some lines need this)
 rxgain=1.0       ;linear receive gain (1.0 = no change)
 txgain=1.0       ;linear transmit gain (1.0 = no change)
 language=de      ;set default language
@@ -38,6 +39,8 @@ softdtmf=on      ;enable/disable software dtmf detection, recommended for AVM ca
 relaxdtmf=on     ;in addition to softdtmf, you can use relaxed dtmf detection
 faxdetect=off    ;enable faxdetection and redirection to EXTEN 'fax' for incoming and/or
                  ;outgoing calls. (default='off', possible values: 'incoming','outgoing','both')
+faxdetecttime=0  ;Only detect faxes during the first 'n' seconds of the call.
+                 ;(default '0' meaning for the whole duration of the call)
 accountcode=     ;PBX accountcode to use in CDRs
 ;amaflags=default;AMA flags for CDR ('default', 'omit', 'billing', or 'documentation')
 context=isdn-in  ;context for incoming calls
