@@ -1,6 +1,18 @@
 CHANGES
 =======
 
+HEAD
+------------------
+- added config setting 'faxdetecttime' to limit the fax detection for a given amount of seconds.
+- added config option for subscriber prefix. Some lines may show local calls without area code
+  signaled as subscriber-number. Here the complete prefix including area code must be added.
+- better counting of active b-channels.
+- make capicommand(progress) "early-B3" usable for non NT-mode incoming channels too.
+- support early Line-Interconnect (bridge) as soon as both b-channels are up. This bridges b-channels
+  from beginning of call-establishment, even before calls are connected and the bridge command is received.
+  Dial() option 'G' is used to activate this feature.
+
+
 chan_capi-1.1.1
 ------------------
 - fixed controller count when creating NULL-PLCI interface.
